feat: :lock: Add X-Api-Key

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.5.1",
     "@nestjs/mapped-types": "^0.3.0",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/swagger": "^4.7.12",
     "@nestjs/typeorm": "^7.1.5",
@@ -34,6 +35,8 @@
     "express-rate-limit": "^5.2.5",
     "helmet": "^4.4.1",
     "mongodb": "^3.6.4",
+    "passport": "^0.4.1",
+    "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
